Basic markup rendering

--- a/ui.html
+++ b/ui.html
@@ -34,7 +34,7 @@
           <h3>You selected: <span>${event.data.pluginMessage.component.name}</span></h3>
           <p class="description">${event.data.pluginMessage.component.description}</p>
           <pre>
-            <code>Code TBD</code>
+            <code>${event.data.pluginMessage.markup}</code>
           </pre>
           <p class="documentation">
             Need more help? Check
