--- a/ui.html
+++ b/ui.html
@@ -14,10 +14,6 @@
     margin: 0;
   }
 
-  .heading {
-    border-bottom: 1px solid #555867;
-  }
-
   .main-title {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 600;
@@ -58,7 +54,7 @@
   }
 
   .widget-information li {
-    border-bottom: 1px solid #808495;
+    border-top: 1px solid #808495;
   }
 
   .widget-information li h2 {
