--- a/ui.html
+++ b/ui.html
@@ -9,7 +9,7 @@
     font-weight: 300;
     font-size: .75rem;
     color: #BFC5D3;
-    padding: 0 .75rem;
+    padding: 0 1rem;
     line-height: 1.4;
     margin: 0;
   }
@@ -19,7 +19,7 @@
     font-weight: 600;
     font-size: .75rem;
     color: white;
-    padding: .75rem;
+    padding: 1rem;
     margin-bottom: 0;
   }
 
@@ -44,7 +44,7 @@
   }
 
   .message {
-    padding-bottom: .5rem;
+    padding-bottom: .75rem;
   }
 
   .widget-information {
@@ -63,19 +63,20 @@
     color: white;
     font-weight: 500;
     font-size: .75rem;
-    padding: 0 .75rem;
+    padding: 0 1rem;
+    margin-top: 1rem;
     margin-bottom: .25rem;
   }
 
   .widget-information li code {
-    padding: .75rem;
+    padding: 1rem;
     display: block;
     color: white;
     word-wrap: break-word;
   }
 
   .documentation {
-    padding-bottom: .75rem;
+    padding-bottom: 1rem;
   }
 
   .documentation a {
@@ -84,6 +85,24 @@
 
   .documentation a:hover {
     text-decoration: none;
+  }
+
+  .code-container {
+    position: relative;
+  }
+
+  .click-to-copy {
+    position: absolute;
+    right: .25rem;
+    top: .25rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+  }
+
+  .click-to-copy:hover {
+    opacity: .8;
   }
 </style>
 
@@ -125,7 +144,16 @@
         container.innerHTML = `
           <h2>${event.data.pluginMessage.component.name}</h2>
           <p class="description">${event.data.pluginMessage.component.description}</p>
-          <code>${event.data.pluginMessage.component.markup}</code>
+          <div class="code-container">
+            <button onclick="${clickToCopy(event.data.pluginMessage.component.markup)}" class="click-to-copy" title="Click to copy!">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.51085 5.49983V4.51103C5.51085 3.40522 6.40861 2.50879 7.51605 2.50879H11.526C12.6335 2.50879 13.5312 3.40522 13.5312 4.51103V8.51551C13.5312 9.62131 12.6335 10.5177 11.526 10.5177H10.5778M8.54645 13.5088H4.53645C3.42901 13.5088 2.53125 12.6124 2.53125 11.5065V7.50207C2.53125 6.39626 3.42901 5.49983 4.53645 5.49983H8.54645C9.65389 5.49983 10.5516 6.39626 10.5516 7.50207V11.5065C10.5516 12.6124 9.65389 13.5088 8.54645 13.5088Z" stroke="#808495"/>
+              </svg>
+            </button>
+            <code>
+              ${event.data.pluginMessage.component.markup}
+            </code>
+          </div>
           <p class="documentation">
             Need more help? Check our docs for
             <a
@@ -154,6 +182,24 @@
         information.innerHTML = '';
         information.style.display = 'none';
         break;
+    }
+  }
+
+  // Click to copy functionality
+  const clickToCopy = (string) => {
+    const el = document.createElement('textarea');
+    el.value = string;
+    el.setAttribute('readonly', '');
+    el.style.position = 'absolute';
+    el.style.left = '-9999px';
+    document.body.appendChild(el);
+    const selected = document.getSelection().rangeCount > 0 ? document.getSelection().getRangeAt(0) : false;
+    el.select();
+    document.execCommand('copy');
+    document.body.removeChild(el);
+    if (selected) {
+      document.getSelection().removeAllRanges();
+      document.getSelection().addRange(selected);
     }
   }
 </script>
